--- a/Bahawalpur-restaurants.html
+++ b/Bahawalpur-restaurants.html
@@ -8,7 +8,6 @@
       margin: 0;
       padding: 20px;
       background-color: #f2f2f2;
-    }
 
     h1 {
       text-align: center;
@@ -67,8 +66,41 @@
 
   <ul class="restaurant-list">
     <li class="restaurant-item">
+  <a href="four-seasons.html">
+    <img src="fourseasons.jpg" alt="Four Seasons" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="four-seasons.html">
+      <h2>Four Seasons</h2>
+      <p>Fine dinning • Continental</p>
+    </a>
+  </div>
+</li>
+<li class="restaurant-item">
+  <a href="chaye-khana.html">
+    <img src="modelt.jpg" alt="Chaye Khana Bahawalpur" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="chaye-khana-bahawalpur.html">
+      <h2>Chaye Khana (Bahawalpur)</h2>
+      <p>Café • Desi Breakfast</p>
+    </a>
+  </div>
+</li>
+<li class="restaurant-item">
+  <a href="chaye-khana-dha.html">
+    <img src="dhachaye.jpg" alt="Chaye Khana DHA BWP" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="chaye-khana-dha.html">
+      <h2>Chaye Khana (DHA BWP)</h2>
+      <p>Café • Tea & Snacks</p>
+    </a>
+  </div>
+</li>
+    <li class="restaurant-item">
       <a href="salt-n-pepper.html">
-        <img src="images/salt.jpg" alt="Salt n Pepper" class="restaurant-img">
+        <img src="fbag.jpg" alt="Salt n Pepper" class="restaurant-img">
       </a>
       <div class="restaurant-info">
         <a href="salt-n-pepper.html">
@@ -77,10 +109,54 @@
         </a>
       </div>
     </li>
+    <li class="restaurant-item">
+  <a href="bbq-tonight.html">
+    <img src="bbqbwp.jpg" alt="BBQ Tonight" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="bbq-tonight.html">
+      <h2>BBQ Tonight</h2>
+      <p>Barbecue • Pakistani</p>
+    </a>
+  </div>
+</li>
+    <li class="restaurant-item">
+  <a href="house-of-kebabjees.html">
+    <img src="kebabjeesbwp.jpg" alt="House of Kebabjees" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="house-of-kebabjees.html">
+      <h2>House of Kebabjees</h2>
+      <p>BBQ • Fast Food</p>
+    </a>
+  </div>
+</li>
+<li class="restaurant-item">
+  <a href="janan-de-cafe.html">
+    <img src="images/janan.jpg" alt="Janan De Cafe" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="janan-de-cafe.html">
+      <h2>Janan De Cafe</h2>
+      <p>Trendy • Desi Fusion</p>
+    </a>
+  </div>
+</li>
+<li class="restaurant-item">
+  <a href="kfc-bwp.html">
+    <img src="images/kfc.jpg" alt="KFC Bahawalpur" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="kfc-bwp.html">
+      <h2>KFC Bahawalpur</h2>
+      <p>Fried Chicken • International</p>
+    </a>
+  </div>
+</li>
 
     <li class="restaurant-item">
       <a href="khairpuri restaurant.html">
-        <img src="images/pizza.jpg" alt="khairpuri restaurant" class="restaurant-img">
+        <img src="Omg.jpg" alt="khairpuri restaurant" class="restaurant-img">
       </a>
       <div class="restaurant-info">
         <a href="khairpuri restaurant.html">
@@ -89,6 +165,39 @@
         </a>
       </div>
     </li>
+    <li class="restaurant-item">
+  <a href="14th-street.html">
+    <img src="images/14th.jpg" alt="14th Street Pizza" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="14th-street.html">
+      <h2>14th Street Pizza</h2>
+      <p>Pizza • Delivery</p>
+    </a>
+  </div>
+</li>
+    <li class="restaurant-item">
+  <a href="pizzalogist.html">
+    <img src="images/pizzalogist.jpg" alt="Pizzalogist" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="pizzalogist.html">
+      <h2>Pizzalogist</h2>
+      <p>Pizza • Fast Food</p>
+    </a>
+  </div>
+</li>
+<li class="restaurant-item">
+  <a href="asia-cafe.html">
+    <img src="images/asia.jpg" alt="Asia Cafe" class="restaurant-img">
+  </a>
+  <div class="restaurant-info">
+    <a href="asia-cafe.html">
+      <h2>Asia Cafe</h2>
+      <p>Desi Food • Tea</p>
+    </a>
+  </div>
+</li>
   </ul>
 
 </body>
