--- a/Bahawalpur.html
+++ b/Bahawalpur.html
@@ -11,7 +11,7 @@
       color: #333;
     }
     .hero {
-  <body style="background: url('noormahal.jpg.jpg') no-repeat center center/cover;">
+  background: url('noormahal.jpg') no-repeat center center / cover;
       height: 320px;
       position: relative;
       display: flex;
@@ -29,11 +29,14 @@
     }
     .hero-content {
       z-index: 1;
-    }
-    .hero-content h1 {
-      font-size: 42px;
-      margin-bottom: 10px;
-    }
+    }.hero-content h1 {
+  font-size: 52px;
+  color: #ffeb3b; /* Soft yellow for better contrast */
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+}
     .intro-section {
       max-width: 1000px;
       margin: 40px auto;
@@ -97,6 +100,7 @@
         <li><a href="#">🌳 Parks</a></li>
         <li><a href="#">🏰 Historical Buildings</a></li>
         <li><a href="#">🏊‍♂️ Swimming Pools</a></li>
+        <li><a href="bahawalpur-events.html">Events 🎉</a></li>
       </ul>
     </div>
   </section>
